--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@pedrouid/iso-store": "^1.0.4",
     "@json-rpc-tools/signer": "^1.0.0",
+    "@json-rpc-tools/types": "^1.0.0",
     "@json-rpc-tools/utils": "^1.0.0",
     "jsonschema": "^1.4.0"
   },
