--- a/packages/blockchain/package.json
+++ b/packages/blockchain/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@json-rpc-tools/auth",
-  "description": "Authenticator for JSON-RPC",
+  "name": "@json-rpc-tools/blockchain",
+  "description": "Blockchain Provider and Authenticator for JSON-RPC",
   "version": "1.1.3",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
@@ -21,7 +21,7 @@
     "utils",
     "signer",
     "provider",
-    "auth"
+    "blockchain"
   ],
   "scripts": {
     "clean": "rm -rf dist",
@@ -34,11 +34,10 @@
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
   "dependencies": {
+    "@json-rpc-tools/multi": "^1.1.3",
     "@json-rpc-tools/provider": "^1.1.3",
-    "@json-rpc-tools/types": "^1.1.3",
     "@json-rpc-tools/utils": "^1.1.3",
-    "@pedrouid/iso-store": "^1.0.4",
-    "jsonschema": "^1.4.0"
+    "@pedrouid/iso-store": "^1.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
