--- a/packages/multi/package.json
+++ b/packages/multi/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@json-rpc-tools/provider",
-  "description": "Provider for JSON-RPC",
+  "name": "@json-rpc-tools/multi",
+  "description": "Multi-Service Provider for JSON-RPC",
   "version": "1.1.3",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
@@ -35,9 +35,8 @@
   },
   "dependencies": {
     "@json-rpc-tools/utils": "^1.1.3",
-    "axios": "^0.21.0",
-    "safe-json-utils": "^1.1.1",
-    "ws": "^7.4.0"
+    "@json-rpc-tools/validator": "^1.1.3",
+    "lodash.difference": "^4.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
