--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@json-rpc-tools/provider",
-  "description": "Provider for JSON-RPC",
+  "name": "@json-rpc-tools/validator",
+  "description": "Validator for JSON-RPC",
   "version": "1.1.3",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
@@ -35,9 +35,7 @@
   },
   "dependencies": {
     "@json-rpc-tools/utils": "^1.1.3",
-    "axios": "^0.21.0",
-    "safe-json-utils": "^1.1.1",
-    "ws": "^7.4.0"
+    "jsonschema": "^1.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
