--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/pedrouid/json-rpc-tools",
   "license": "MIT",
   "scripts": {
-    "clean": "lerna clean",
+    "clean": "lerna clean --yes",
     "bootstrap": "lerna bootstrap --hoist",
     "lint": "lerna run lint",
     "build": "lerna run build",
