--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@json-rpc-tools/utils",
-  "description": "Utilities for JSON-RPC",
+  "name": "@json-rpc-tools/router",
+  "description": "Router for JSON-RPC",
   "version": "1.4.1",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
@@ -29,12 +29,14 @@
     "build:cjs": "npx tsc -p tsconfig.cjs.json",
     "build:umd": "webpack",
     "build": "run-s build:pre build:cjs build:umd",
-    "test": "env TS_NODE_PROJECT=\"tsconfig.cjs.json\" mocha -r ts-node/register ./test/**/*.{test,spec}.ts",
+    "test": "tsdx test ./test",
     "watch": "tsc -p tsconfig.json --watch",
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
   "dependencies": {
-    "@json-rpc-tools/types": "^1.4.1"
+    "@json-rpc-tools/utils": "^1.4.1",
+    "@json-rpc-tools/validator": "^1.4.1",
+    "lodash.difference": "^4.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -44,15 +46,10 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.1",
-    "@pedrouid/timestamp": "^1.0.0",
-    "@types/chai": "^4.2.14",
     "@types/jest": "^22.2.3",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.2",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
-    "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.10.0",
@@ -63,11 +60,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
-    "lodash.isequal": "4.5.0",
-    "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "ts-node": "^9.0.0",
     "tsdx": "^0.14.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
