--- a/packages/blockchain/package.json
+++ b/packages/blockchain/package.json
@@ -38,7 +38,7 @@
     "@json-rpc-tools/router": "^1.5.2",
     "@json-rpc-tools/utils": "^1.5.2",
     "@json-rpc-tools/validator": "^1.5.2",
-    "@pedrouid/iso-store": "^1.0.4"
+    "keyvaluestorage": "^0.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
