--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -29,7 +29,7 @@
     "build:cjs": "npx tsc -p tsconfig.cjs.json",
     "build:umd": "webpack",
     "build": "run-s build:pre build:cjs build:umd",
-    "test": "tsdx test ./test",
+    "test": "env TS_NODE_PROJECT=\"tsconfig.cjs.json\" mocha --exit -r ts-node/register ./test/**/*.test.ts",
     "watch": "tsc -p tsconfig.json --watch",
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
@@ -48,6 +48,8 @@
     "@babel/register": "^7.12.1",
     "@types/jest": "^22.2.3",
     "@types/node": "^14.14.2",
+    "@types/mocha": "^8.2.0",
+    "@types/chai": "^4.2.14",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "core-js": "^3.6.5",
@@ -62,7 +64,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "tsdx": "^0.14.1",
+    "mocha": "^8.1.3",
+    "chai": "^4.2.0",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
