--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -50,6 +50,8 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.2",
+    "@types/mocha": "^8.2.0",
+    "@types/chai": "^4.2.14",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "chai": "^4.2.0",
@@ -68,7 +70,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "ts-node": "^9.0.0",
-    "tsdx": "^0.14.1",
+    "mocha": "^8.1.3",
+    "chai": "^4.2.0",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
