--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -33,6 +33,9 @@
     "watch": "tsc -p tsconfig.json --watch",
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
+  "dependencies": {
+    "keyvaluestorage-interface": "^1.0.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
@@ -58,7 +61,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
-    "keyvaluestorage-interface": "^1.0.0",
     "mocha": "^8.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
