--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -48,12 +48,14 @@
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.1",
     "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/jest": "^22.2.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.2",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "core-js": "^3.6.5",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.10.0",
