--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -6,6 +6,28 @@
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
   "license": "MIT",
   "main": "dist/cjs/index.js",
+  "exports": {
+    ".": {
+      "node": "./dist/cjs/index.js",
+      "browser": "./dist/esm/index.js",
+      "default": "./dist/cjs/index.js"
+    },
+    "./lite": {
+      "node": "./dist/cjs/lite.js",
+      "browser": "./dist/esm/lite.js",
+      "default": "./dist/cjs/lite.js"
+    },
+    "./http": {
+      "node": "./dist/cjs/http.js",
+      "browser": "./dist/esm/http.js",
+      "default": "./dist/cjs/http.js"
+    },
+    "./ws": {
+      "node": "./dist/cjs/ws.js",
+      "browser": "./dist/esm/ws.js",
+      "default": "./dist/cjs/ws.js"
+    }
+  },
   "types": "dist/cjs/index.d.ts",
   "unpkg": "dist/umd/index.min.js",
   "files": [
@@ -28,7 +50,8 @@
     "build:pre": "run-s clean",
     "build:cjs": "npx tsc -p tsconfig.cjs.json",
     "build:umd": "webpack",
-    "build": "run-s build:pre build:cjs build:umd",
+    "build:esm": "npx tsc -p tsconfig.esm.json",
+    "build": "run-s build:pre build:cjs build:esm build:umd",
     "test": "env TS_NODE_PROJECT=\"tsconfig.cjs.json\" mocha --exit -r ts-node/register ./test/**/*.test.ts",
     "watch": "tsc -p tsconfig.json --watch",
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
