--- a/packages/blockchain/package.json
+++ b/packages/blockchain/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@json-rpc-tools/blockchain",
   "description": "Blockchain Provider and Authenticator for JSON-RPC",
-  "version": "1.7.6",
+  "version": "2.0.0-beta.0",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
   "license": "MIT",
@@ -36,9 +36,9 @@
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
   "dependencies": {
-    "@json-rpc-tools/provider": "^1.7.6",
-    "@json-rpc-tools/router": "^1.7.6",
-    "@json-rpc-tools/utils": "^1.7.6",
+    "@json-rpc-tools/provider": "^2.0.0-beta.0",
+    "@json-rpc-tools/router": "^2.0.0-beta.0",
+    "@json-rpc-tools/utils": "^2.0.0-beta.0",
     "keyvaluestorage": "^0.7.1"
   },
   "devDependencies": {
@@ -49,7 +49,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.1",
-    "@json-rpc-tools/validator": "^1.7.6",
+    "@json-rpc-tools/validator": "^2.0.0-beta.0",
     "@types/chai": "^4.2.14",
     "@types/jest": "^22.2.3",
     "@types/mocha": "^8.2.0",
