--- a/packages/multi/package.json
+++ b/packages/multi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@json-rpc-tools/multi",
   "description": "Multi-Service Provider for JSON-RPC",
-  "version": "1.7.6",
+  "version": "2.0.0-beta.0",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
   "license": "MIT",
@@ -36,9 +36,9 @@
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
   "dependencies": {
-    "@json-rpc-tools/router": "^1.7.6",
-    "@json-rpc-tools/utils": "^1.7.6",
-    "@json-rpc-tools/validator": "^1.7.6",
+    "@json-rpc-tools/router": "^2.0.0-beta.0",
+    "@json-rpc-tools/utils": "^2.0.0-beta.0",
+    "@json-rpc-tools/validator": "^2.0.0-beta.0",
     "lodash.difference": "^4.5.0"
   },
   "devDependencies": {
