--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@json-rpc-tools/provider",
   "description": "Provider for JSON-RPC",
-  "version": "1.7.6",
+  "version": "2.0.0-beta.0",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
   "license": "MIT",
@@ -57,7 +57,7 @@
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
   "dependencies": {
-    "@json-rpc-tools/utils": "^1.7.6",
+    "@json-rpc-tools/utils": "^2.0.0-beta.0",
     "axios": "^0.21.0",
     "safe-json-utils": "^1.1.1",
     "ws": "^7.4.0"
