--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@json-rpc-tools/validator",
   "description": "Validator for JSON-RPC",
-  "version": "1.7.6",
+  "version": "2.0.0-beta.0",
   "author": "Pedro Gomes <github.com/pedrouid>",
   "homepage": "https://github.com/pedrouid/json-rpc-tools/",
   "license": "MIT",
@@ -36,7 +36,7 @@
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'"
   },
   "dependencies": {
-    "@json-rpc-tools/utils": "^1.7.6",
+    "@json-rpc-tools/utils": "^2.0.0-beta.0",
     "jsonschema": "^1.4.0"
   },
   "devDependencies": {
