--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@json-rpc-tools/utils": "^2.0.0-beta.1",
-    "axios": "^0.21.0",
+    "cross-fetch": "^3.1.4",
     "safe-json-utils": "^1.1.1",
     "ws": "^7.4.0"
   },
